@@ -317,6 +317,10 @@
   * Add upstream Rev. 3055:
     - Update: www/vicidial/realtime_report.php: Added external_web_socket_url
         option.
+  * Add upstream Rev. 3056:
+    - Update: www/vicidial/admin_phones_bulk_insert.php,
+        www/vicidial/call_report_export.php,
+        www/vicidial/help_documentation.txt: Added template option.
 
 2.25.27
   [Jörg Fring-Fürst]
